--- a/vue/src/styles/_variables.scss
+++ b/vue/src/styles/_variables.scss
@@ -59,3 +59,23 @@ $content-table-padding: 5px;
 $table-even-row-bg-color: rgba(0, 0, 0, 0.05);
 $table-odd-row-bg-color: rgba(0, 0, 0, 0.00);
 $table-hover-row-bg-color: rgba(0, 0, 0, 0.15);
+
+// Sidenav
+$sidenav-padding: 15px;
+$sidenav-depth-padding: 15px;
+$sidenav-color: #2b2b2b;
+$sidenav-active-color: #0041dc;
+
+// Header sisalto container
+$sisalto-container-margin: 40px;
+
+// Uutiset
+$uutiset-header-background: #2F5FD1;
+
+// Koulutustyyppi colors
+$koulutustyyppi-ammatillinen-color: #008800;
+$koulutustyyppi-esiopetus-color: #84d2ff;
+$koulutustyyppi-lukio-color: #0143da;
+$koulutustyyppi-perusopetus-color: #67cccc;
+$koulutustyyppi-varhaiskasvatus-color: #ffcc33;
+$koulutustyyppi-taiteenperusopetus-color: #faccea;
